Completed experience page for admin part

--- a/AspNetCore_Project/AspNetCore_Project/Views/Skill/AddSkill.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Skill/AddSkill.cshtml
@@ -5,7 +5,11 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<form class="form-group mt-4" method="post">
+<div class="card-header border-0">
+    <h3 class="mb-4">Skill Add Page</h3>
+</div>
+
+<form class="form-group" method="post">
     <br/><br/><br/>
     <label>Skill Title</label>
     <input type="text" name="Title" class="form-control mt-2"/>
