--- a/AspNetCore_Project/AspNetCore_Project/Views/Experience/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Experience/Index.cshtml
@@ -1,13 +1,14 @@
 @using EntityLayer.Concrete
-@model List<Skill>
+@model List<Experience>
+
 @{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 <div class="card-header border-0">
-    <h3 class="mb-4">Skill Lists
-        <a href="/Skill/AddSkill" class="btn btn-success float-right">Add New Skill</a>
-    </h3>
+            <a href="/Experience/AddExperience" class="btn btn-success float-right">Add New Experience</a>
+    <h3 class="mb-4">Experience List</h3>
 </div>
 <!-- Light table -->
 <div class="table-responsive">
@@ -16,7 +17,7 @@
         <tr>
             <th scope="col" class="sort" data-sort="name">#</th>
             <th scope="col" class="sort" data-sort="budget">Title</th>
-            <th scope="col" class="sort" data-sort="status">Ratio</th>
+            <th scope="col" class="sort" data-sort="status">Date</th>
             <th scope="col">Delete</th>
             <th scope="col" class="sort" data-sort="completion">Update</th>
             <th scope="col"></th>
@@ -27,26 +28,19 @@
         {
             <tr>
                 <th>
-                    @item.SkillId
+                    @item.ExperienceId
                 </th>
                 <td class="budget">
-                    @item.Title
+                    @item.Name
                 </td>
                 <td>
-                    <div class="d-flex align-items-center">
-                        <span class="completion mr-2">@item.Value %</span>
-                        <div>
-                            <div class="progress">
-                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="@item.Value" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%;"></div>
-                            </div>
-                        </div>
-                    </div>
+                    @item.Date
                 </td>
                 <td>
-                    <a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-danger">Delete</a>
+                        <a href="/Experience/DeleteExperience/@item.ExperienceId" class="btn btn-danger">Delete</a>
                 </td>
                 <td>
-                    <a href="/Skill/UpdateSkill/@item.SkillId" class="btn btn-primary">Update</a>
+                    <a href="/Experience/UpdateExperience/@item.ExperienceId" class="btn btn-primary">Update</a>
                 </td>
             </tr>
         }
