--- a/AspNetCore_Project/AspNetCore_Project/Views/Portfolio/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Portfolio/Index.cshtml
@@ -20,9 +20,9 @@
                         <th scope="col" class="sort" data-sort="name">Project</th>
                         <th scope="col" class="sort" data-sort="budget">Price</th>
                         <th scope="col" class="sort" data-sort="status">Status</th>
-                        <th scope="col">Images</th>
                         <th scope="col" class="sort" data-sort="completion">Completion</th>
-                        <th scope="col"></th>
+                        <th scope="col">Delete</th>
+                        <th scope="col">Update</th>
                     </tr>
                     </thead>
                     <tbody class="list">
@@ -49,22 +49,6 @@
                                 </span>
                             </td>
                             <td>
-                                <div class="avatar-group">
-                                    <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
-                                        <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-1.jpg">
-                                    </a>
-                                    <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Romina Hadid">
-                                        <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-2.jpg">
-                                    </a>
-                                    <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Alexander Smith">
-                                        <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-3.jpg">
-                                    </a>
-                                    <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Jessica Doe">
-                                        <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-4.jpg">
-                                    </a>
-                                </div>
-                            </td>
-                            <td>
                                 <div class="d-flex align-items-center">
                                     <span class="completion mr-2">@item.Value%</span>
                                     <div>
@@ -74,18 +58,11 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="text-right">
-                                <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                    </div>
-                                </div>
+                            <td>
+                                <a href="/Portfolio/DeletePortfolio/@item.PortfolioId" class="btn btn-outline-danger">Delete</a>
                             </td>
+                            <td>
+                                <a href="/Portfolio/UpdatePortfolio/@item.PortfolioId" class="btn btn-outline-warning">Update</a>
                         </tr>
                     }
                     </tbody>
