--- a/AspNetCore_Project/AspNetCore_Project/Views/Shared/Components/MessageList/Default.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,3 +1,6 @@
+@using EntityLayer.Concrete
+@model List<UserMessage>
+
 <div class="col-md-6 col-xl-4 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -5,64 +8,25 @@
                     <h4 class="card-title">Messages</h4>
                     <p class="text-muted mb-1 small">View all</p>
                 </div>
-                <div class="preview-list">
-                    <div class="preview-item border-bottom">
-                        <div class="preview-thumbnail">
-                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face6.jpg" alt="image" class="rounded-circle"/>
-                        </div>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">Leonard</h6>
-                                    <p class="text-muted text-small">5 minutes ago</p>
+                @foreach (var item in Model)
+                {
+                    <div class="preview-list">
+                        <div class="preview-item border-bottom">
+                            <div class="preview-thumbnail">
+                                <img src="@item.User.ImageUrl" alt="image" class="rounded-circle"/>
+                            </div>
+                            <div class="preview-item-content d-flex flex-grow">
+                                <div class="flex-grow">
+                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                        <h6 class="preview-subject">@item.User.Name</h6>
+                                        <p class="text-muted text-small">@item.Date</p>
+                                    </div>
+                                    <p class="text-muted">@item.Content</p>
                                 </div>
-                                <p class="text-muted">Well, it seems to be working now.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="preview-item border-bottom">
-                        <div class="preview-thumbnail">
-                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face8.jpg" alt="image" class="rounded-circle"/>
-                        </div>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">Luella Mills</h6>
-                                    <p class="text-muted text-small">10 Minutes Ago</p>
-                                </div>
-                                <p class="text-muted">Well, it seems to be working now.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="preview-item border-bottom">
-                        <div class="preview-thumbnail">
-                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face9.jpg" alt="image" class="rounded-circle"/>
-                        </div>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">Ethel Kelly</h6>
-                                    <p class="text-muted text-small">2 Hours Ago</p>
-                                </div>
-                                <p class="text-muted">Please review the tickets</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="preview-item border-bottom">
-                        <div class="preview-thumbnail">
-                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face11.jpg" alt="image" class="rounded-circle"/>
-                        </div>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">Herman May</h6>
-                                    <p class="text-muted text-small">4 Hours Ago</p>
-                                </div>
-                                <p class="text-muted">Thanks a lot. It was easy to fix it .</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
