User registration and login processes completed

--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/Index.cshtml
@@ -1,58 +1,52 @@
-@model dynamic
+@using EntityLayer.Concrete
+@model List<Announcement>
 
 @{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
+@{
+  string color = "";
+  string status = "";
+}
+
 <div class="col-lg-12 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
           <h4 class="card-title">Basic Table</h4>
-          <p class="card-description">
-            Add class <code>.table</code>
-          </p>
           <div class="table-responsive">
             <table class="table">
               <thead>
               <tr>
-                <th>Profile</th>
-                <th>VatNo.</th>
-                <th>Created</th>
+                <th>#</th>
+                <th>Title</th>
+                <th>Date</th>
                 <th>Status</th>
+                <th>Details</th>
               </tr>
               </thead>
               <tbody>
+              @foreach (var item in Model)
+              {
+                if (item.Status == true)
+                {
+                  color = "badge badge-success";
+                  status = "Active";
+                }
+                else
+                {
+                  color = "badge badge-danger";
+                  status = "Passive";
+                }
               <tr>
-                <td>Jacob</td>
-                <td>53275531</td>
-                <td>12 May 2017</td>
-                <td><label class="badge badge-danger">Pending</label></td>
+                <td>@item.Id</td>
+                <td>@item.Title</td>
+                <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
+                <td><label class="@color">@status</label></td>
+                <td><a href="/Writer/Home/AnnouncementDetails" class="btn btn-outline-primary">Details</a></td>
               </tr>
-              <tr>
-                <td>Messsy</td>
-                <td>53275532</td>
-                <td>15 May 2017</td>
-                <td><label class="badge badge-warning">In progress</label></td>
-              </tr>
-              <tr>
-                <td>John</td>
-                <td>53275533</td>
-                <td>14 May 2017</td>
-                <td><label class="badge badge-info">Fixed</label></td>
-              </tr>
-              <tr>
-                <td>Peter</td>
-                <td>53275534</td>
-                <td>16 May 2017</td>
-                <td><label class="badge badge-success">Completed</label></td>
-              </tr>
-              <tr>
-                <td>Dave</td>
-                <td>53275535</td>
-                <td>20 May 2017</td>
-                <td><label class="badge badge-warning">In progress</label></td>
-              </tr>
+              }
               </tbody>
             </table>
           </div>
