--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Register/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Register/Index.cshtml
@@ -1,76 +1,87 @@
+@model AspNetCore_Project.Areas.Writer.Models.UserRegisterViewModel
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Skydash Admin</title>
-  <link rel="stylesheet" href="~/skydash/vendors/feather/feather.css">
-  <link rel="stylesheet" href="~/skydash/vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="~/skydash/vendors/css/vendor.bundle.base.css">
-  <link rel="stylesheet" href="~/skydash/css/vertical-layout-light/style.css">
-  <link rel="shortcut icon" href="~/skydash/images/favicon.png" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Skydash Admin</title>
+    <link rel="stylesheet" href="~/skydash/vendors/feather/feather.css">
+    <link rel="stylesheet" href="~/skydash/vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="~/skydash/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="~/skydash/css/vertical-layout-light/style.css">
+    <link rel="shortcut icon" href="~/skydash/images/favicon.png"/>
 </head>
 
 <body>
-  <div class="container-scroller">
+<div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
-      <div class="content-wrapper d-flex align-items-center auth px-0">
-        <div class="row w-100 mx-0">
-          <div class="col-lg-4 mx-auto">
-            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              <div class="brand-logo">
-                <img src="~/skydash/images/logo.svg" alt="logo">
-              </div>
-              <h4>New here?</h4>
-              <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-              <form class="pt-3">
-                <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+        <div class="content-wrapper d-flex align-items-center auth px-0">
+            <div class="row w-100 mx-0">
+                <div class="col-lg-4 mx-auto">
+                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="brand-logo">
+                            <img src="~/skydash/images/logo.svg" alt="logo">
+                        </div>
+                        <h4>New here?</h4>
+                        <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
+                        <form class="pt-3" method="post">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <span asp-validaton-for="Name" class="text-danger"></span>
+                                <input type="text" asp-validation-for="UserRegisterViewModel.Name" asp-for="Name" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Surname</label>
+                                <span asp-validaton-for="Surname" class="text-danger"></span>
+                                <input type="text" asp-validation-for="Surname" asp-for="Surname"  class="form-control"/>
+                            </div><div class="form-group">
+                                <label>UserName</label>
+                                <span asp-validaton-for="UserName" class="text-danger"></span>
+                                <input type="text" asp-validation-for="UserName" asp-for="UserName"  class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label>ImageUrl</label>
+                                <span asp-validaton-for="ImageUrl" class="text-danger"></span>
+                                <input type="text" asp-validation-for="ImageUrl" asp-for="ImageUrl"  class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Password</label>
+                                <span asp-validaton-for="Password" class="text-danger"></span>
+                                <input type="text" asp-validation-for="Password" asp-for="Password" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Confirm Password</label>
+                                <span asp-validaton-for="PasswordConfirm" class="text-danger"></span>
+                                <input type="text" asp-validation-for="PasswordConfirm" asp-for="PasswordConfirm" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <span asp-validaton-for="Email" class="text-danger"></span>
+                                <input type="text" asp-validation-for="Email" asp-for="Email" class="form-control"/>
+                            </div>
+                            <div class="text-danger" asp-validation-summary="ModelOnly">
+                            </div>
+                            <div class="mt-3">
+                                <button class="btn btn-primary">Register</button>
+                            </div>
+                            <div class="text-center mt-4 font-weight-light">
+                                Already have an account? <a href="login.html" class="text-primary">Login</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                    <option>Country</option>
-                    <option>United States of America</option>
-                    <option>United Kingdom</option>
-                    <option>India</option>
-                    <option>Germany</option>
-                    <option>Argentina</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="mb-4">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      I agree to all Terms & Conditions
-                    </label>
-                  </div>
-                </div>
-                <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="~/skydash/index.html">SIGN UP</a>
-                </div>
-                <div class="text-center mt-4 font-weight-light">
-                  Already have an account? <a href="login.html" class="text-primary">Login</a>
-                </div>
-              </form>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
-  <script src="~/skydash/vendors/js/vendor.bundle.base.js"></script>
-  <script src="~/skydash/js/off-canvas.js"></script>
-  <script src="~/skydash/js/hoverable-collapse.js"></script>
-  <script src="~/skydash/js/template.js"></script>
-  <script src="~/skydash/js/settings.js"></script>
-  <script src="~/skydash/js/todolist.js"></script>
+</div>
+<script src="~/skydash/vendors/js/vendor.bundle.base.js"></script>
+<script src="~/skydash/js/off-canvas.js"></script>
+<script src="~/skydash/js/hoverable-collapse.js"></script>
+<script src="~/skydash/js/template.js"></script>
+<script src="~/skydash/js/settings.js"></script>
+<script src="~/skydash/js/todolist.js"></script>
 </body>
 
 </html>
