profile page added

--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/AnnouncementDetails.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/AnnouncementDetails.cshtml
@@ -1,5 +1,4 @@
-@using EntityLayer.Concrete
-@model List<Announcement>
+@model EntityLayer.Concrete.Announcement
 
 @{
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
