Edits have been made in the User section

--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/_SidebarPartial.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/_SidebarPartial.cshtml
@@ -1,33 +1,39 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/WriterDashboard/Index">
                 <i class="icon-grid menu-icon"></i>
                 <span class="menu-title">Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/Message/Index">
                 <i class="icon-layout menu-icon"></i>
                 <span class="menu-title">Messages</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/Home/Index/">
                 <i class="icon-grid-2 menu-icon"></i>
-                <span class="menu-title">Tables</span>
+                <span class="menu-title">Announcements</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/Profile/Index/">
                 <i class="icon-contract menu-icon"></i>
                 <span class="menu-title">Profile</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/documentation/documentation.html">
-                <i class="icon-paper menu-icon"></i>
+            <a class="nav-link" href="/Writer/Profile/Index/">
+                <i class="ti-settings menu-icon"></i>
                 <span class="menu-title">Settings</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Login/Logout/">
+                <i class="ti-power-off k menu-icon"></i>
+                <span class="menu-title">Logout</span>
             </a>
         </li>
     </ul>
