Added WriterMessage table

--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/_SidebarPartial.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Home/_SidebarPartial.cshtml
@@ -7,20 +7,32 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/Message/Index">
+            <a class="nav-link" href="/Writer/Message/RecieverMessage">
+                <i class="ti-notepad menu-icon"></i>
+                <span class="menu-title">Reciever Messages</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/SenderMessage">
+                <i class="ti-new-window menu-icon"></i>
+                <span class="menu-title">Sender Messages</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/AddMessage">
                 <i class="icon-layout menu-icon"></i>
-                <span class="menu-title">Messages</span>
+                <span class="menu-title">New Messages</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Home/Index/">
-                <i class="icon-grid-2 menu-icon"></i>
+                <i class="ti-announcement menu-icon"></i>
                 <span class="menu-title">Announcements</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Profile/Index/">
-                <i class="icon-contract menu-icon"></i>
+                <i class="ti-user menu-icon"></i>
                 <span class="menu-title">Profile</span>
             </a>
         </li>
