--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
@@ -7,7 +7,7 @@
             <i class="ti-settings text-primary"></i>
             Settings
         </a>
-        <a class="dropdown-item" href="/Writer/Login/Logout">
+        <a class="dropdown-item" href="/Writer/Login/Logout/">
             <i class="ti-power-off text-primary"></i>
             Logout
         </a>
