--- a/AspNetCore_Project/AspNetCore_Project/Views/Shared/Components/MessageList/Default.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,5 +1,5 @@
 @using EntityLayer.Concrete
-@model List<UserMessage>
+@model List<Message>
 
 <div class="col-md-6 col-xl-4 grid-margin stretch-card">
         <div class="card">
@@ -13,12 +13,12 @@
                     <div class="preview-list">
                         <div class="preview-item border-bottom">
                             <div class="preview-thumbnail">
-                                <img src="@item.User.ImageUrl" alt="image" class="rounded-circle"/>
+                                @* <img src="@item.User.ImageUrl" alt="image" class="rounded-circle"/> *@
                             </div>
                             <div class="preview-item-content d-flex flex-grow">
                                 <div class="flex-grow">
                                     <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                        <h6 class="preview-subject">@item.User.Name</h6>
+                                        <h6 class="preview-subject">@item.Name</h6>
                                         <p class="text-muted text-small">@item.Date</p>
                                     </div>
                                     <p class="text-muted">@item.Content</p>
