--- a/AspNetCore_Project/AspNetCore_Project/Views/Admin/NewSidebar.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Admin/NewSidebar.cshtml
@@ -100,13 +100,21 @@
     </a>
   </li>
   <li class="nav-item menu-items">
-    <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/icons/mdi.html">
+    <a class="nav-link" href="/AdminMessage/InboxMessageList">
       <span class="menu-icon">
         <i class="mdi mdi-message"></i>
       </span>
-      <span class="menu-title">Messages</span>
+      <span class="menu-title">Inbox Messages</span>
     </a>
   </li>
+  <li class="nav-item menu-items">
+      <a class="nav-link" href="/AdminMessage/SenderMessageList">
+        <span class="menu-icon">
+          <i class="mdi mdi-message"></i>
+        </span>
+        <span class="menu-title">Sender Messages</span>
+      </a>
+    </li>
   <li class="nav-item menu-items">
     <a class="nav-link" href="/Contact/Index">
       <span class="menu-icon">
@@ -124,7 +132,7 @@
     </a>
   </li> 
   <li class="nav-item menu-items">
-    <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/icons/mdi.html">
+    <a class="nav-link" href="/Testimonial/Index">
       <span class="menu-icon">
         <i class="mdi mdi-contacts"></i>
       </span>
