Completed deficiencies and edits in the admin section

--- a/AspNetCore_Project/AspNetCore_Project/Views/Admin/NewSidebar.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Admin/NewSidebar.cshtml
@@ -52,7 +52,7 @@
     <span class="nav-link">Navigation</span>
   </li>
   <li class="nav-item menu-items">
-    <a class="nav-link" href="../../index.html">
+    <a class="nav-link" href="/Dashboard/Index">
       <span class="menu-icon">
         <i class="mdi mdi-speedometer"></i>
       </span>
@@ -73,14 +73,6 @@
         <i class="mdi mdi-playlist-play"></i>
       </span>
       <span class="menu-title">Experience</span>
-    </a>
-  </li>
-  <li class="nav-item menu-items">
-    <a class="nav-link" href="../../pages/charts/chartjs.html">
-      <span class="menu-icon">
-        <i class="mdi mdi-chart-bar"></i>
-      </span>
-      <span class="menu-title">Graphics</span>
     </a>
   </li>
   <li class="nav-item menu-items">
@@ -148,29 +140,19 @@
     </a>
   </li>
   <li class="nav-item menu-items">
-    <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-      <span class="menu-icon">
-        <i class="mdi mdi-security"></i>
-      </span>
-      <span class="menu-title">Password & Security</span>
-      <i class="menu-arrow"></i>
-    </a>
-    <div class="collapse" id="auth">
-      <ul class="nav flex-column sub-menu">
-        <li class="nav-item"> <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/blank-page.html"> Blank Page </a></li>
-        <li class="nav-item"> <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/error-404.html"> 404 </a></li>
-        <li class="nav-item"> <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/error-500.html"> 500 </a></li>
-        <li class="nav-item"> <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/login.html"> Login </a></li>
-        <li class="nav-item"> <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/register.html"> Register </a></li>
-      </ul>
-    </div>
-  </li>
+      <a class="nav-link" href="/SocialMedia/Index">
+        <span class="menu-icon">
+          <i class="mdi mdi-contacts"></i>
+        </span>
+        <span class="menu-title">Social Media</span>
+      </a>
+    </li>
   <li class="nav-item menu-items">
-    <a class="nav-link" href="http://www.bootstrapdash.com/demo/corona-free/jquery/documentation/documentation.html">
+    <a class="nav-link" href="/ContactSubplace/Index">
       <span class="menu-icon">
         <i class="mdi mdi-file-document-box"></i>
       </span>
-      <span class="menu-title">Documentation</span>
+      <span class="menu-title">Contact Sub Menu</span>
     </a>
   </li>
   <li class="nav-item menu-items">
