--- a/AspNetCore_Project/AspNetCore_Project/Views/Default/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Default/Index.cshtml
@@ -6,85 +6,39 @@
 }
 
 <!DOCTYPE html>
-<!-- upto 2 directory depth-->
 <html lang="en-US">
 @await Html.PartialAsync("HeaderPartial")
 <body id="top">
 @await Html.PartialAsync("NavbarPartial")
 
 <div class="page-content">
-<div id="content">
-@await Component.InvokeAsync("FeatureList")
+    <div id="content">
+        @await Component.InvokeAsync("FeatureList")
 
-@await Component.InvokeAsync("AboutList")
+        @await Component.InvokeAsync("AboutList")
 
-@await Component.InvokeAsync("ServiceList")
+        @await Component.InvokeAsync("ServiceList")
 
-@await Component.InvokeAsync("SkillList")
-    
-@await Component.InvokeAsync("PortfolioList")
+        @await Component.InvokeAsync("SkillList")
 
-@await Component.InvokeAsync("ExperienceList")
+        @await Component.InvokeAsync("PortfolioList")
 
-@await Component.InvokeAsync("TestimonialList")
-<div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
-    <div class="container-narrow">
-        <div class="text-center mb-5">
-            <h2 class="marker marker-center">Contact Me</h2>
-        </div>
-        <div class="row">
-            @* @await Component.InvokeAsync("SendMessage") *@
-            @await Html.PartialAsync("SendMessage")
-            @await Component.InvokeAsync("ContactDetails")
-        </div>
-    </div>
-</div>
-<footer class="pt-4 pb-4 text-center bg-light">
-    <div class="container">
-        <div class="my-3">
-            <div class="h4">Walter Patterson</div>
-            <p>Web Developer & Mobile Application Developer</p>
-            <div class="social-nav">
-                <nav role="navigation">
-                    <ul class="nav justify-content-center">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://twitter.com/templateflip" title="Twitter">
-                                <i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook">
-                                <i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram">
-                                <i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn">
-                                <i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.behance.net/templateflip" title="Behance">
-                                <i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+        @await Component.InvokeAsync("ExperienceList")
+
+        @await Component.InvokeAsync("TestimonialList")
+        <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
+            <div class="container-narrow">
+                <div class="text-center mb-5">
+                    <h2 class="marker marker-center">Contact Me</h2>
+                </div>
+                <div class="row">
+                    @await Html.PartialAsync("SendMessage")
+                    @await Component.InvokeAsync("ContactDetails")
+                </div>
             </div>
         </div>
-        <div class="text-small text-secondary">
-            <div class="mb-1">&copy; Super Folio. All rights reserved.</div>
-            <div>
-                <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>
-            </div>
-        </div>
+        @await Component.InvokeAsync("AdminFooterList")
     </div>
-</footer>
-</div>
 </div>
 <div id="scrolltop">
     <a class="btn btn-secondary" href="#top">
