Added transactions with Ajax

--- a/AspNetCore_Project/AspNetCore_Project/Views/Shared/_NewAdminLayout.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Shared/_NewAdminLayout.cshtml
@@ -170,5 +170,6 @@
 <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
 <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+@RenderSection("Scripts", required: false)
 </body>
 </html>
