--- a/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/WriterDashboard/Index.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Areas/Writer/Views/WriterDashboard/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                 <h3 class="font-weight-bold">Welcome @ViewBag.v</h3>
-                <h6 class="font-weight-normal mb-0">ASP.NET Core User Dashboard Panel! Click Now For New Announcements<span class="text-primary">3 unread alerts!</span></h6>
+                <h6 class="font-weight-normal mb-0">ASP.NET Core User Dashboard Panel! Click Now For New Announcements<span class="text-primary"><a href="/Writer/Home/Index"> 3 unread alerts!</a></span></h6>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="justify-content-end d-flex">
