--- a/AspNetCore_Project/AspNetCore_Project/Views/Default/NavbarPartial.cshtml
+++ b/AspNetCore_Project/AspNetCore_Project/Views/Default/NavbarPartial.cshtml
@@ -12,6 +12,7 @@
               <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="/Writer/Login/Index">Login</a></li>
             </ul>
           </div>
         </div>
